--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div class="container">
     <div class="card">
-      <img src="/img/loto1.jpg" alt="Imagen loto">
+      <img src="img/loto1.jpg" alt="Imagen loto">
       <h2>FLOR DE LOTO</h2>
       <h3>La flor de la dulzura</h3>
       <p>Esta flor procedente de japón es famosa por su delicada belleza</p>
