--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@
       <p>Esta flor procedente de japón es famosa por su delicada belleza</p>
     </div>
     <div class="card">
-      <img src="/img/loto1.jpg" alt="Imagen loto">
+      <img src="img/loto1.jpg" alt="Imagen loto">
       <h2>FLOR DE LOTO</h2>
       <h3>La flor de la dulzura</h3>
       <p>Esta flor procedente de japón es famosa por su delicada belleza</p>
     </div>
         <div class="card">
-      <img src="/img/loto1.jpg" alt="Imagen loto">
+      <img src="img/loto1.jpg" alt="Imagen loto">
       <h2>FLOR DE LOTO</h2>
       <h3>La flor de la dulzura</h3>
       <p>Esta flor procedente de japón es famosa por su delicada belleza</p>
     </div>
     <div class="card">
-        <img src="/img/loto1.jpg" alt="Imagen loto">
+        <img src="img/loto1.jpg" alt="Imagen loto">
         <h2>FLOR DE LOTO</h2>
         <h3>La flor de la dulzura</h3>
         <p>Esta flor procedente de japón es famosa por su delicada belleza</p>
       </div>
       <div class="card">
-        <img src="/img/loto1.jpg" alt="Imagen loto">
+        <img src="img/loto1.jpg" alt="Imagen loto">
         <h2>FLOR DE LOTO</h2>
         <h3>La flor de la dulzura</h3>
         <p>Esta flor procedente de japón es famosa por su delicada belleza</p>
       </div>
       <div class="card">
-        <img src="/img/loto1.jpg" alt="Imagen loto">
+        <img src="img/loto1.jpg" alt="Imagen loto">
         <h2>FLOR DE LOTO</h2>
         <h3>La flor de la dulzura</h3>
         <p>Esta flor procedente de japón es famosa por su delicada belleza</p>
